--- a/Practica1/topLevel.qsf
+++ b/Practica1/topLevel.qsf
@@ -53,4 +53,25 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulati
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_location_assignment PIN_128 -to outx[5]
+set_location_assignment PIN_121 -to outx[4]
+set_location_assignment PIN_125 -to outx[3]
+set_location_assignment PIN_129 -to outx[2]
+set_location_assignment PIN_132 -to outx[1]
+set_location_assignment PIN_126 -to outx[0]
+set_location_assignment PIN_28 -to inx[0]
+set_location_assignment PIN_30 -to inx[1]
+set_location_assignment PIN_31 -to inx[2]
+set_location_assignment PIN_32 -to inx[3]
+set_location_assignment PIN_42 -to inx[8]
+set_location_assignment PIN_39 -to inx[7]
+set_location_assignment PIN_38 -to inx[6]
+set_location_assignment PIN_34 -to inx[5]
+set_location_assignment PIN_137 -to light
+set_location_assignment PIN_91 -to mode[3]
+set_location_assignment PIN_90 -to mode[2]
+set_location_assignment PIN_89 -to mode[1]
+set_location_assignment PIN_88 -to mode[0]
+set_location_assignment PIN_33 -to inx[4]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
