--- a/practica4/practica4.qsf
+++ b/practica4/practica4.qsf
@@ -53,4 +53,26 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE practica4.vhd
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_location_assignment PIN_127 -to seg[7]
+set_location_assignment PIN_124 -to seg[6]
+set_location_assignment PIN_126 -to seg[5]
+set_location_assignment PIN_132 -to seg[4]
+set_location_assignment PIN_129 -to seg[3]
+set_location_assignment PIN_125 -to seg[2]
+set_location_assignment PIN_121 -to seg[1]
+set_location_assignment PIN_128 -to seg[0]
+set_location_assignment PIN_88 -to sel[2]
+set_location_assignment PIN_89 -to sel[1]
+set_location_assignment PIN_90 -to sel[0]
+set_location_assignment PIN_83 -to A[2]
+set_location_assignment PIN_77 -to A[1]
+set_location_assignment PIN_75 -to A[0]
+set_location_assignment PIN_73 -to B[2]
+set_location_assignment PIN_71 -to B[1]
+set_location_assignment PIN_69 -to B[0]
+set_location_assignment PIN_80 -to C[2]
+set_location_assignment PIN_76 -to C[1]
+set_location_assignment PIN_74 -to C[0]
+set_location_assignment PIN_91 -to mode
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
